feat: add manual channel selection
